# Tokenizer

./: .gitignore  CMakeLists.txt  C_tokens.txt  README.md  merge.py  notes.txt  todo.txt
MakeFast/: CMakeLists.txt
MakeFast/src/: Helper_fucs.c  Helper_fucs.h  Tokenizer.h  main.c
Testing/: .gitignore  C_tokens.txt  notes.txt
Testing/src/: Dic.c  Dic.h  Helper_fucs.c  Helper_fucs.h  StrArr.c  StrArr.h  ThreadData.c  Tokenizer.c  Tokenizer.h  main.c
V2/: notes.txt
V2/src/: Dic.c  Dic.h  helperFuncs.c  helperFuncs.h  main.c
data/: infiniteJest.txt
old/src/: Dic.c  StringArr.c  StringArr.h  main.c
python_scripts/: main.py
src/: Dic.c  Dic.h  Dics.c  Dics.h  Helper.c  Helper.h  Helper_fucs.c  Helper_fucs.h  Map_token.c  Map_token.h  RedBlack.c  RedBlack.h  StrArr.c  StrArr.h  String.c  String.h  StringArr.h  TextToken.c  TextToken.h  ThreadData.c  ThreadData.h  Token.c  Token.h  Tokenizer.c  Tokenizer.h  VocabArr.c  VocabArr.h  main.c
testing/: a.py  check.py  main.py  results.txt  testing.py
testing/Arrs/: main.c
v2/: CMakeLists.txt
v2/data/: infiniteJest.txt
v2/src/: Dic.h  Heap.c  Heap.h  StringArr.c  main.c
